[gd_scene load_steps=8 format=2]

[ext_resource path="res://Script/Select.gd" type="Script" id=1]
[ext_resource path="res://Asset/background.png" type="Texture" id=2]
[ext_resource path="res://Font/font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Asset/paddle_select.tres" type="TileSet" id=4]
[ext_resource path="res://Asset/paddle_types.tres" type="TileSet" id=5]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[node name="Select" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 539.675, 303.768 )
scale = Vector2( 3.59354, 4.66868 )
texture = ExtResource( 2 )

[node name="InfoSelect" type="Label" parent="."]
margin_left = -150.0
margin_top = 133.5
margin_right = 1247.0
margin_bottom = 204.5
custom_fonts/font = SubResource( 1 )
text = "Select your paddle with left and right!"
align = 1
valign = 1

[node name="InfoPress" type="Label" parent="."]
margin_left = -150.0
margin_top = 192.0
margin_right = 1249.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 2 )
text = "(Press Enter to continue!)"
align = 1
valign = 1

[node name="PaddleLeft" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 163.619
margin_top = 380.0
margin_right = 236.619
margin_bottom = 455.0

[node name="Texture" type="TileMap" parent="PaddleLeft"]
position = Vector2( 0, 3 )
scale = Vector2( 3, 3 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="PaddleRight" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 866.133
margin_top = 387.356
margin_right = 939.133
margin_bottom = 462.356

[node name="Texture" type="TileMap" parent="PaddleRight"]
position = Vector2( -358.65, -430.872 )
scale = Vector2( 3, 3 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( 393221, 1, 0, 2228218, 0, 0 )

[node name="PaddleType" type="TileMap" parent="."]
position = Vector2( 70, 18 )
scale = Vector2( 3, 3 )
tile_set = ExtResource( 5 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0 )
[connection signal="pressed" from="PaddleLeft" to="." method="_on_PaddleLeft_pressed"]
[connection signal="pressed" from="PaddleRight" to="." method="_on_PaddleRight_pressed"]
